objects/L2O_Consult_Fee__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Broker_Benefit_Consultant_Involved__c</fullName>
        <label>Broker/Benefit Consultant Involved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_BusinessRegion__c</fullName>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Business_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ConsultType__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Consult_Fee__c</fullName>
        <label>Consult Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ContractPath__c</fullName>
        <description>Contract Path = CPQ Pricebook</description>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path_Sub_type__c</fullName>
        <description>To capture the Contract Path Sub Type.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path_Sub_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_ID__c</fullName>
        <formula>L2O_Contracting_Account__r.L2O_GUID__c</formula>
        <label>Contracting Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account_Name__c</fullName>
        <label>Contracting Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consult Fees (Contracting Account)</relationshipLabel>
        <relationshipName>Consult_Fees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Code_Formula__c</fullName>
        <formula>IF(ISBLANK(L2O_Fee_Code__c), &apos;NULL&apos; , L2O_Fee_Code__c)</formula>
        <label>Fee Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Code__c</fullName>
        <label>Fee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Description__c</fullName>
        <label>Fee Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>IF(ISBLANK(L2O_Parent_Product__r.ProductCode), &apos;NULL&apos; , L2O_Parent_Product__r.ProductCode)</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the parent product for this bundled product.</description>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consult Fees (Parent Product)</relationshipLabel>
        <relationshipName>ConsultFees_ParentProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ProductCode__c</fullName>
        <formula>L2O_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consult Fees</relationshipLabel>
        <relationshipName>Consult_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Total_Visits__c</fullName>
        <label>% Total Visits</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legacy_Consult_Fee_Key__c</fullName>
        <description>To keep ref while loading data.</description>
        <label>Legacy Consult Fee Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Consult Fee</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>L2O_BusinessRegion__c</columns>
        <columns>Legacy_Consult_Fee_Key__c</columns>
        <columns>L2O_ContractPath__c</columns>
        <columns>L2O_Contract_Path_Sub_type__c</columns>
        <columns>L2O_ConsultType__c</columns>
        <columns>L2O_Broker_Benefit_Consultant_Involved__c</columns>
        <columns>L2O_Parent_Product__c</columns>
        <columns>L2O_Consult_Fee__c</columns>
        <columns>L2O_ProductCode__c</columns>
        <columns>L2O_EffectiveDate__c</columns>
        <columns>L2O_Contracting_Account_Name__c</columns>
        <columns>L2O_ExpirationDate__c</columns>
        <columns>L2O_Fee_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2O_Contracting_Account_Name__c</field>
            <operation>contains</operation>
            <value>BCBS SC</value>
        </filters>
        <filters>
            <field>L2O_ConsultType__c</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filters>
        <filters>
            <field>L2O_Pricing_Model__c</field>
            <operation>equals</operation>
            <value>ASO</value>
        </filters>
        <filters>
            <field>L2O_Parent_Product__c</field>
            <operation>contains</operation>
            <value>General Medical</value>
        </filters>
        <filters>
            <field>L2O_Parent_Product__c</field>
            <operation>equals</operation>
            <value>Mental Health Care</value>
        </filters>
        <label>BCBS SC Consult Fees</label>
    </listViews>
    <listViews>
        <fullName>All_Consult_Fees</fullName>
        <columns>NAME</columns>
        <columns>L2O_BusinessRegion__c</columns>
        <columns>L2O_Consult_Fee__c</columns>
        <columns>L2O_Broker_Benefit_Consultant_Involved__c</columns>
        <columns>L2O_ContractPath__c</columns>
        <columns>L2O_Contracting_Account_Name__c</columns>
        <columns>L2O_EffectiveDate__c</columns>
        <columns>L2O_ExpirationDate__c</columns>
        <columns>L2O_Fee_Code__c</columns>
        <columns>L2O_ProductCode__c</columns>
        <columns>L2O_Parent_Product_Code__c</columns>
        <columns>L2O_Pricing_Model__c</columns>
        <columns>L2O_ConsultType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Consult Fees</label>
    </listViews>
    <nameField>
        <displayFormat>CCF-{00000}</displayFormat>
        <label>Consult Fee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consult Fees</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>L2O_Require_Pricing_Model</fullName>
        <active>true</active>
        <description>Require Pricing Model if Contracting Account is populated.</description>
        <errorConditionFormula>NOT(ISBLANK((L2O_Contracting_Account__c))) &amp;&amp;  
(
ISBLANK( TEXT(L2O_Pricing_Model__c))
 || TEXT(L2O_Pricing_Model__c) = &apos;NULL&apos;) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorDisplayField>L2O_BusinessRegion__c</errorDisplayField>
        <errorMessage>Require Pricing Model if Contracting Account is populated.</errorMessage>
    </validationRules>
</CustomObject>